Initial checking for 1.21.4 update