@@ -15,15 +15,15 @@ public class SoundToast {
 
     public static void create(Music music) {
         var soundLibrary = ContainerManager.resolve(ISoundLibrary.class);
-        var metadata = soundLibrary.getSoundMetadata(music.getEvent().value().getLocation());
+        var metadata = soundLibrary.getSoundMetadata(music.getEvent().value().location());
         if (metadata != null && !metadata.getCredits().isEmpty()) {
             var title = metadata.getTitle();
             if (!Component.empty().equals(title)) {
-                var author = metadata.getCredits().get(0).author();
+                var author = metadata.getCredits().getFirst().author();
                 var titleLine = Component.translatable("dsurround.text.toast.music.title", title);
                 var authorLine = Component.translatable("dsurround.text.toast.music.author", author);
                 var toast = WarmToast.multiline(GameUtils.getMC(), SOUND_TOAST_PROFILE, titleLine, authorLine);
-                GameUtils.getMC().getToasts().addToast(toast);
+                GameUtils.getMC().getToastManager().addToast(toast);
             }
         }
     }
